src/k8s/apps/wekan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wekan
  labels:
    app.kubernetes.io/name: wekan
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
