src/k8s/apps/wekan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wekan
  labels:
    app.kubernetes.io/name: wekan
spec:
  selector:
    app.kubernetes.io/name: wekan
  ports:
    - name: http
      port: 80
      targetPort: http
